data/derived/sp14/progs/unify/prog0644.ml.out
Characters 76-77:
  else clone (x::acc) (n-1)
              ^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
